<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="16dp">


    <EditText
        android:id="@+id/et_numbers"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/hint_et">

    </EditText>


    <TextView
        android:id="@+id/tv_hint_below_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_numbers">

    </TextView>


    <RadioGroup
        android:id="@+id/tip_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_hint_below_et"
        android:orientation="vertical"
        android:checkedButton="@id/amazing">

        <RadioButton
            android:id="@+id/amazing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amazing">
        </RadioButton>

        <RadioButton
            android:id="@+id/good"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good">
        </RadioButton>

        <RadioButton
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/OK">
        </RadioButton>


    </RadioGroup>


    <Switch
        android:id="@+id/switch_main"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/round_up_tip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tip_options"
        app:layout_constraintStart_toStartOf="@+id/tip_options">

    </Switch>


    <Button
        android:id="@+id/btn_calculate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Calculate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_main"
        app:layout_constraintEnd_toEndOf="parent">

    </Button>

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/hint_result"
        app:layout_constraintTop_toBottomOf="@id/btn_calculate"
        app:layout_constraintEnd_toEndOf="parent">

    </TextView>




</androidx.constraintlayout.widget.ConstraintLayout>